cmake_minimum_required(VERSION 3.20)
project(webserver)

set(CMAKE_CXX_STANDARD 11)
#include_directories(SYSTEM "/foo/bar")
#include_directories(.)
#include_directories(lock)
#include_directories("${PROJECT_SOURCE_DIR}")
add_executable(main main.cpp ./timer/lst_timer.cpp ./http/http_conn.cpp ./log/log.cpp ./CGImysql/sql_connection_pool.cpp webserver.cpp config.cpp)
#add_executable(main main.cpp)
target_link_libraries(main pthread)
target_link_libraries(main /usr/lib64/mysql/libmysqlclient.so)